--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "homepage": "https://luydmillka.github.io/goit-js-hw-08",
   "scripts": {
     "start": "parcel src/*.html",
-    "build": "parcel build src/*.html https://luydmillka.github.io/goit-js-hw-08/"
+    "build": "parcel build src/*.html https://github.com/luydmillka/goit-js-hw-08"
   },
   "repository": {
     "type": "git",
@@ -18,7 +18,8 @@
     "url": "https://github.com/goitacademy/parcel-project-template/issues"
   },
   "dependencies": {
-    "modern-normalize": "^1.1.0"
+    "modern-normalize": "^1.1.0",
+    "simplelightbox": "^2.11.0"
   },
   "devDependencies": {
     "@parcel/transformer-sass": "^2.6.0",
